--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
+
   <head>
     <meta charset="utf-8">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/style2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css"> -->
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>Hello World</title>
   </head>
-  <body>
-    <div class="wrapper">
-    <div class="container">
-      <header>
-        <h1 class="name">jlord</h1>
-      </header>
-      <article>
-        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too.</p>
-        <p> Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
-      </article>
 
-    <footer>
-      <ul class="meta inline-list">
-        <li><a href="mailto:to.jlord@gmail.com">to.jlord@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>
-        <li><a href="http://www.github.com/jlord" target="_blank">github/jlord</a></li>
-      </ul>
-    </footer>
-  </div>
-  </div>
+  <body>
+
+    <div class=content>
+
+      <div class=profile>
+        <img style="max-width:100%;height:auto;" src="assets/profile2.jpg">
+      </div>
+
+      <div class=article>
+
+        <header>
+
+          <h1 class="name">elise<br>trần</h1>
+
+          <nav></nav>
+
+        </header>
+
+        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too. Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
+
+      </div>
+
+    </div>
   </body>
 </html>
