--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
     <title>Hello World</title>
   </head>
 
@@ -23,16 +24,19 @@
 
         <header>
 
-          <h1 class="name">elise<br>trần</h1>
-
-          <nav></nav>
+          <h1 class="name">elise trần</h1>
 
         </header>
 
         <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too. Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
 
-      </div>
+        <nav>
+            <i class="far fa-envelope"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin-in"></i>
+        </nav>
 
+      </div>
     </div>
   </body>
 </html>
