Fixed layout alignment. Crop profile.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
-    <title>Hello World</title>
+    <title>Elise T.</title>
   </head>
 
   <body>
@@ -19,17 +19,18 @@
       <header>
         <h1 class="name">elise trần</h1>
         <nav>
-            <i class="far fa-envelope"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-linkedin-in"></i>
+          <i class="fas fa-graduation-cap"></i>
+          <i class="far fa-envelope"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-linkedin-in"></i>
         </nav>
       </header>
 
       <div class=profile>
-        <img style="max-width:100%;height:auto;" src="assets/profile2.jpg">
+        <img style="max-width:100%; height:auto;" src="assets/profile-square.jpg">
       </div>
 
-      <div class=article>
+      <article>
 
 
 
@@ -37,7 +38,7 @@
 
 
 
-      </div>
+      </article>
     </div>
   </body>
 </html>
