Randomize JS between two color schemes.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
-    <title>Elise T.</title>
+    <script type="text/javascript" src="./js/randColor.js"></script>
+    <title>e. trần</title>
   </head>
 
   <body>
