--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
 
       <div class=profile>
-        <img style="max-width:100%; height:auto;" src="assets/profile-square.jpg">
+        <img style="max-width:100%; height:auto;" src="assets/profile1-square.jpg">
       </div>
 
       <article>
