--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/randColor.js"></script>
-    <title>e. trần</title>
+    <title>e.trần</title>
   </head>
 
   <body>
@@ -33,11 +33,11 @@
 
       <article>
 
+        <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hostpital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a behavior analyst at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to visiting families.</p>
 
+        <!-- My role involves program development of the multidisciplinary autism clinic, liaising with physicians and service providers on behalf of families with children newly diagnosed or receiving re-evaluations related to autism, and developing individualized care plans for families in need of higher-level care coordination. -->
 
-        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too. Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
-
-
+        <p>I am passionate about inclusive, early intervention for children of all abilities. In 2015, I received my M.Ed. in special education and applied behavior analysis from the University of Washington. Since then, I have accumulated a wide range of teaching and behavior science experiences at home, in the classroom, and in the clinic.</p>
 
       </article>
     </div>
