Added some hyperlinks.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <nav>
           <i class="fas fa-graduation-cap"></i>
           <i class="far fa-envelope"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-linkedin-in"></i>
+          <a href="https://twitter.com/sitonapumpkin" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/elise-tran-26b0aa48" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </nav>
       </header>
 
@@ -33,11 +33,11 @@
 
       <article>
 
-        <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hostpital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a behavior analyst at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to visiting families.</p>
+        <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hostpital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a behavior analyst at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to families of children impacted by rare genetic disorders.</p>
 
         <!-- My role involves program development of the multidisciplinary autism clinic, liaising with physicians and service providers on behalf of families with children newly diagnosed or receiving re-evaluations related to autism, and developing individualized care plans for families in need of higher-level care coordination. -->
 
-        <p>I am passionate about inclusive, early intervention for children of all abilities. In 2015, I received my M.Ed. in special education and applied behavior analysis from the University of Washington. Since then, I have accumulated a wide range of teaching and behavior science experiences at home, in the classroom, and in the clinic.</p>
+        <!-- <p>I am passionate about inclusive, early intervention for children of all abilities. In 2015, I received my M.Ed. in special education and applied behavior analysis from the University of Washington. Since then, I have accumulated a wide range of teaching and behavior science experiences at home, in the classroom, and in the clinic.</p> -->
 
       </article>
     </div>
