Fix typos and added resume.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
         <h1 class="name">elise trần</h1>
         <nav>
-          <i class="fas fa-graduation-cap"></i>
+          <a href="./assets/resume.pdf" target="_blank"><i class="fas fa-graduation-cap"></i></a>
           <i class="far fa-envelope"></i>
           <a href="https://twitter.com/sitonapumpkin" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://www.linkedin.com/in/elise-tran-26b0aa48" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -33,7 +33,7 @@
 
       <article>
 
-        <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hostpital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a behavior analyst at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to families of children impacted by rare genetic disorders.</p>
+        <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hospital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a behavior analyst at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to families of children impacted by rare genetic disorders.</p>
 
         <!-- My role involves program development of the multidisciplinary autism clinic, liaising with physicians and service providers on behalf of families with children newly diagnosed or receiving re-evaluations related to autism, and developing individualized care plans for families in need of higher-level care coordination. -->
 
