--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/randColor.js"></script>
-    <title>elise trần</title>
+    <title>Elise Tran</title>
   </head>
 
   <body>
@@ -35,7 +35,7 @@
 
         <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hospital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a developmental specialist at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to families of children impacted by rare genetic disorders.</p>
 
-        <p>I am passionate about inclusive, early intervention for children of all abilities. Learn more about <a href="./assets/resume.pdf" target="_blank">my work</a> and let's <a href='mail&#116;o&#58;&#101;%6&#67;&#37;&#54;9&#115;&#37;65nt%72%6&#49;%6E&#64;&#103;&#37;&#54;D&#97;&#105;%6C&#46;&#37;63&#111;m'>start a conversation!</a></p>
+        <p>I am passionate about inclusive, early intervention for children of all abilities. Learn more about <a href="./assets/resume.pdf" target="_blank">my work</a> and let's <a href='mail&#116;o&#58;&#101;%6&#67;&#37;&#54;9&#115;&#37;65nt%72%6&#49;%6E&#64;&#103;&#37;&#54;D&#97;&#105;%6C&#46;&#37;63&#111;m'>start a conversation</a>!</p>
 
         <!-- My role involves program development of the multidisciplinary autism clinic, liaising with physicians and service providers on behalf of families with children newly diagnosed or receiving re-evaluations related to autism, and developing individualized care plans for families in need of higher-level care coordination. -->
 
