Added quick favicons.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/randColor.js"></script>
     <title>Elise Tran</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="assets/site.webmanifest">
   </head>
 
   <body>
