--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class=content>
 
       <header>
-        <h1 class="name"><a href="./index.html">elise trần</a></h1>
+        <h1 class="name"><a href="./index.html">elise tran</a></h1>
         <nav>
           <a href="./assets/tran_resume.pdf" target="_blank"><i class="fas fa-graduation-cap"></i></a>
           <a href='mail&#116;o&#58;&#101;%6&#67;&#37;&#54;9&#115;&#37;65nt%72%6&#49;%6E&#64;&#103;&#37;&#54;D&#97;&#105;%6C&#46;&#37;63&#111;m'><i class="far fa-envelope"></i></a>
