Updated main page copy with new job info. Updated favicon asterisk. Updated links with changed name. Draft of new resume.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/randColor.js"></script>
-    <title>Elise Tran</title>
+    <title>Elise Abraham</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
@@ -22,12 +22,12 @@
     <div class=content>
 
       <header>
-        <h1 class="name"><a href="./index.html">elise tran</a></h1>
+        <h1 class="name"><a href="./index.html">elise abraham&ast;</a></h1>
         <nav>
-          <a href="./assets/tran_resume.pdf" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-          <a href='mail&#116;o&#58;&#101;%6&#67;&#37;&#54;9&#115;&#37;65nt%72%6&#49;%6E&#64;&#103;&#37;&#54;D&#97;&#105;%6C&#46;&#37;63&#111;m'><i class="far fa-envelope"></i></a>
+          <a href="./assets/abraham_resume.pdf" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+          <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#101;&#116;&#114;&#97;&#110;&#97;&#98;&#114;&#97;&#104;&#97;&#109;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;'><i class="far fa-envelope"></i></a>
           <a href="https://twitter.com/sitonapumpkin" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/in/elise-tran-26b0aa48" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/in/elise-abraham-m-ed-bcba-26b0aa48/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </nav>
       </header>
 
@@ -37,11 +37,9 @@
 
       <article>
 
-        <p>I am a board-certified behavior analyst and care coordinator for the <a href="https://www.rchsd.org/programs-services/autism-discovery-institute" target="_blank">Autism Discovery Institute</a> at Rady Children's Hospital in San Diego, CA. I work with the families of children with autism to help them get the care they need. I am also a developmental specialist at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to families of children impacted by rare genetic disorders.</p>
+        <p>I am a board-certified behavior analyst and ABA assessor for <a href="https://www.easterseals.com/southerncal/" target="_blank">Easterseals Southern California</a> where I work directly with families of children with autism in building personalized treatment plans for their little ones. I am also a developmental specialist at the <a href="https://www.radygenomics.org/" target="_blank">Institute for Genomic Medicine</a> where I provide behavior assessments and consultations to families of children impacted by rare genetic disorders.</p>
 
-        <p>I am passionate about inclusive, early intervention for children of all abilities. Learn more about <a href="./assets/tran_resume.pdf" target="_blank">my work</a> and let's <a href='mail&#116;o&#58;&#101;%6&#67;&#37;&#54;9&#115;&#37;65nt%72%6&#49;%6E&#64;&#103;&#37;&#54;D&#97;&#105;%6C&#46;&#37;63&#111;m'>start a conversation</a>!</p>
-
-        <!-- My role involves program development of the multidisciplinary autism clinic, liaising with physicians and service providers on behalf of families with children newly diagnosed or receiving re-evaluations related to autism, and developing individualized care plans for families in need of higher-level care coordination. -->
+        <p>I am passionate about inclusive, early intervention for children of all abilities. Learn more about <a href="./assets/abraham_resume.pdf" target="_blank">my work</a> and let's <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#101;&#116;&#114;&#97;&#110;&#97;&#98;&#114;&#97;&#104;&#97;&#109;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;'>start a conversation</a>!</p>
 
         <!-- <p>I am passionate about inclusive, early intervention for children of all abilities. In 2015, I received my M.Ed. in special education and applied behavior analysis from the University of Washington. Since then, I have accumulated a wide range of teaching and behavior science experiences at home, in the classroom, and in the clinic.</p> -->
 
