--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8db948073.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./js/randColor.js"></script>
+    <script src="./js/randColor.js"></script>
     <title>Elise Abraham</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
@@ -32,7 +31,7 @@
       </header>
 
       <div class=profile>
-        <img style="max-width:100%; height:auto;" src="assets/profile1-square.jpg">
+        <img style="max-width:100%; height:auto;" src="assets/profile1-square.jpg" alt = "profile">
       </div>
 
       <article>
