--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </header>
 
       <div class=profile>
-        <img style="max-width:100%; height:auto;" src="assets/profile1-square.jpg" alt = "profile">
+        <img style="max-width:100%; height:auto;" src="assets/profile4.jpg" alt = "profile">
       </div>
 
       <article>
